fix flicker

--- a/src/components/code-cell.css
+++ b/src/components/code-cell.css
@@ -1,9 +1,30 @@
+.progress-wrapper {
+  height: 100%;
+  flex-grow: 1;
+  background-color: #fff;
+  width: 100%;
+}
+
 .progress-cover {
   height: 100%;
+  width: 100%;
   flex-grow: 1;
   background-color: #fff;
   display: flex;
   align-items: center;
   padding-left: 10%;
   padding-right: 10%;
+  animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
